force-app/main/default/objects/Fee_Schedule__c/Fee_Schedule__c.object-meta.xml
<CustomObject>
    <description>Prioritized payer-specific or self-pay pricing schedule.</description>
    <label>Fee Schedule</label>
    <nameField>
        <label>Fee Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>