force-app/main/default/objects/Fee_Schedule__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Payer__c</referenceTo>
    <relationshipLabel>Fee Schedules</relationshipLabel>
    <relationshipName>Fee_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>