force-app/main/default/objects/Fee_Schedule__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Payer</fullName><default>true</default><label>Payer</label></value>
            <value><fullName>Self-Pay</fullName><default>false</default><label>Self-Pay</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>