force-app/main/default/objects/Fee_Schedule__c/validationRules/Payer_Required_By_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Payer_Required_By_Type</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISPICKVAL(Schedule_Type__c, &quot;Payer&quot;), ISBLANK(Payer__c)), AND(ISPICKVAL(Schedule_Type__c, &quot;Self-Pay&quot;), NOT(ISBLANK(Payer__c))))</errorConditionFormula>
    <errorMessage>Payer schedules require a payer; self-pay schedules cannot specify one.</errorMessage>
</ValidationRule>