force-app/main/default/objects/Fee_Schedule__c/listViews/Active_Fee_Schedules.listView-meta.xml
<ListView>
    <fullName>Active_Fee_Schedules</fullName>
    <columns>NAME</columns><columns>Schedule_Type__c</columns><columns>Payer__c</columns><columns>Priority__c</columns><columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters><field>Active__c</field><operation>equals</operation><value>1</value></filters>
    <label>Active Fee Schedules</label>
    <sharedTo><allInternalUsers></allInternalUsers></sharedTo>
</ListView>