force-app/main/default/objects/Fee_Schedule__c/listViews/All_Fee_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Fee_Schedules</fullName>
    <columns>NAME</columns><columns>Schedule_Type__c</columns><columns>Payer__c</columns><columns>Priority__c</columns><columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fee Schedules</label>
    <sharedTo><allInternalUsers></allInternalUsers></sharedTo>
</ListView>